--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
-lastWarOutDir=D\:/Programming/deploy.v1/sozpw/target/sozpw-1.0
+jarsExcludedFromWebInfLib=
+lastWarOutDir=D\:/inzynierka/workingdirectory/target/sozpw-0.1
 warSrcDir=src/main/webapp
 warSrcDirIsOutput=false
